--- a/html/echarts.html
+++ b/html/echarts.html
@@ -69,6 +69,10 @@
            }]
        }
        chart.setOption(options)
+       chart.on('click',function(p){
+           console.log(p)
+
+       })
     </script>
     
 </body>
